--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.3.0-beta01'
-        hilt_version = '2.42'
+        compose_version = '1.4.0-alpha01'
+        hilt_version = '2.44.2'
     }
 
     dependencies {
