--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation "com.google.accompanist:accompanist-appcompat-theme:0.27.1"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
